--- a/employeeManager/src/main/resources/templates/update_employee.html
+++ b/employeeManager/src/main/resources/templates/update_employee.html
@@ -12,16 +12,18 @@
 	crossorigin="anonymous">
 </head>
 <body>
+
 	<div class="container">
 		<div class="row">
 
 			<div
 				class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-				<h1 class="text-center">Add New Employee</h1>
+				<h1 class="text-center">Update Employee</h1>
 				<div class="card-body">
-					<form th:action="@{/addEmployee}" th:object="${employee}"
+					<form th:action="@{/employees/{id} (id=${employee.id})}" th:object="${employee}"
 						method="post">
 						
+						<!-- <form th:action="@{/save}" th:object="${employee}" method="post"> -->
 						<div class="form-group">
 							<label>Employees First Name</label> <input type="text"
 								name="firstName" th:field="*{firstName}" class="form-control"
