--- a/employeeManager/src/main/resources/templates/employees.html
+++ b/employeeManager/src/main/resources/templates/employees.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Employee List</title>
+<title>Employee Manager</title>
 
 <link rel="stylesheet"
 	href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -12,6 +12,7 @@
 	crossorigin="anonymous">
 </head>
 <body>
+
 	<div class="container">
 		<div class="row"></div>
 		<h1>List of Employees</h1>
@@ -26,7 +27,7 @@
 					<th>Employee Name</th>
 					<th>Employee Last Name</th>
 					<th>Employee Email</th>
-					<th>Action</th>
+					<th>Update or Delete</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -34,6 +35,13 @@
 					<td th:text="${employee.firstName}"></td>
 					<td th:text="${employee.lastName}"></td>
 					<td th:text="${employee.email}"></td>
+					<td> 
+						<a th:href="@{employees/update/{id}(id=${employee.id})}" class="btn btn btn-primary">Update</a> 
+					</td> 
+					
+					<td> 
+						<a th:href="@{employees/{id}(id=${employee.id})}" class="btn btn btn-danger">Delete</a> 
+					</td> 
 				</tr>
 			</tbody>
 		</table>
